fixed images not showing when links are clicked

--- a/css/style.css
+++ b/css/style.css
@@ -478,7 +478,7 @@ form textarea {
 .top-btn {
     position: fixed;
     right: 2%;
-    bottom: 5%;
+    bottom: 6%;
     width: 30px;
     height: 30px;
     background: lightcoral;
